Translate other-distro and prime.mdx

--- a/i18n/pt/docusaurus-plugin-content-docs/current/arm/archcraft-arm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/arm/archcraft-arm.mdx
@@ -29,7 +29,7 @@ export const Highlight = ({children, color}) => (
 
 ![gif](https://raw.githubusercontent.com/archcraft-os/misc-files/main/arm/main.gif)
 
-Neste guiam nós vamos aprender como instalar o Archcraft em seus dispositivos ARM.
+Neste guia nós vamos aprender como instalar o Archcraft em seus dispositivos ARM.
 
 Como você já sabe, Archcraft é apenas Arch Linux com um monte de customizações. E assim é o Archcraft ARM.
 
