--- a/i18n/pt/docusaurus-plugin-content-docs/current/install-archcraft/post-install.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/install-archcraft/post-install.mdx
@@ -22,7 +22,7 @@ Atualize o banco de dados de pacotes e atualize sua nova instalação.
 $ sudo pacman -Syyu
 ```
 
-If you get `invalid or corrupted package (PGP signature)` error, do...
+Se você tiver um erro `Pacote inválido ou corrompido (Assinatura PGP)`, execute...
 
 ```bash
 $ sudo pacman -S archlinux-keyring
