--- a/i18n/pt/docusaurus-plugin-content-docs/current/other-distro/voidcraft.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/other-distro/voidcraft.mdx
@@ -23,53 +23,53 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas a partir daqui -------------------- -->
 
-**Voidcraft : Experience Archcraft on Void Linux**
+**Voidcraft : Experiência do Archcraft no Void Linux**
 
 [![video](https://raw.githubusercontent.com/archcraft-os/misc-files/main/archcraftify/voidcraft/main.gif)](https://youtu.be/dd0bCn5Mt2E)
 
-## Overview
+## Visão geral
 
-- Turns your Void Linux into **Archcraft**
-- Fully configured `openbox` window manager
-- Fully configured `bspwm` window manager
-- Fully configured `i3wm` window manager **`NEW`**
-- Multiple **themes/styles** for both (openbox and bspwm) WMs
-- Everything else that Archcraft offers
+- Transforme seu Void Linux no **Archcraft**
+- Window manager `openbox` totalmente configurado
+- Window manager `bspwm` totalmente configurado
+- Window manager `i3wm` totalm4nte configurado **`Novo`**
+- Muitos **temas/estilos** para ambos (openbox e bspwm) WMs
+- Tudo mais que o Archcraft oferece
 
 :::warning
-**Voidcraft** is not an ISO or Void Linux based distribution.
+**Voidcraft** não é uma ISO ou uma distribuição baseada no Void Linux
 :::
 
-**Voidcraft** is an installable package that will turn your [Void Linux](https://voidlinux.org/) installation into Archcraft. Once installed on the top of Void Linux, It'll offer everything Archcraft offers on your Void Linux.
+**Voidcraft** é um pacote de instalação para transformar seu [Void Linux](https://voidlinux.org/) no Archcraft. Uma vez instalado em cima do Void Linux, ele irá ter tudo que o Archcraft oferece no seu Void Linux.
 
-**Important** : Voidcraft is created on the top of `Void Linux Live Base (glibc)`(_void-live-x86_64-20240314-base.iso_) and It's ***recommended*** that you install this on a fresh installation of Void Linux.
+**Importante** : Voidcraft é criado em cima do `Void Linux Live Base (glibc)`(_void-live-x86_64-20240314-base.iso_) e é ***recomendado*** que seja instalado em uma nova instalação do Void Linux.
 
 <!-- Download ------------------------------------- -->
 
 ## Download
 
-You can download the latest package from <Highlight color="#50545b"><a href="https://ko-fi.com/s/94be658a0f" target="_blank">ko-fi ☕</a></Highlight>
+Você pode baixar o pacote atualizado em <Highlight color="#50545b"><a href="https://ko-fi.com/s/94be658a0f" target="_blank">ko-fi ☕</a></Highlight>
 
 ### Installation
 
-Follow the step below to install Voidcraft :
+Siga os passos abaixo para instalar o Ubuntucraft:
 
-- First, **Install Void Linux** on your computer
-- Download the `voidcraft.tar.gz` file from ko-fi
-- Transfer or save the file on your Void Linux installation
-- Extract the file : `tar -xzvf voidcraft.tar.gz`
-- Change to extracted directory : `cd voidcraft`
-- Run install script and let it do it's job : `./install.sh`
-- Once finished, _reboot your computer_ and you'll have **Voidcraft installed**.
+- Primeiro, **Instale o Void Linux** no seu computador
+- Baixe o `voidcraft.tar.gz` pelo ko-fi
+- Transfira ou salve o arquivo na sua instalação do Ubuntu
+- Extraia o arquivo: `tar -xzvf voidcraft.tar.gz`
+- Mude para o diretório extraído: `cd voidcraft`
+- Execute o script de instalação e deixe-o fazer o trabalho: `./install.sh`
+- Depois de finalizado _reinicie seu computador_ e você terá o **Voidcraft instalado**.
 
 :::info[Video]
-Watch the [complete installation video](https://youtu.be/dd0bCn5Mt2E)
+Veja o [vídeo de instalação](https://youtu.be/dd0bCn5Mt2E)
 :::
 
 :::tip[Asciinema]
-An **asciinema** file `voidcraft.cast` is provided as well, you can play that to see how the script works before using it.
+O arquivo **asciinema** `ubuntucraft.cast` é fornecido, você pode executá-lo para ver como o script trabalha antes de usá-lo.
 :::
 
 <!-- Changelogs ----------------------------------- -->
@@ -77,41 +77,41 @@ An **asciinema** file `voidcraft.cast` is provided as well, you can play that to
 ## Changelogs
 
 <details>
-<summary><b>Changelog (July 2024) : Last Update</b></summary>
+<summary><b>Changelog (Julho de 2024) : última atualização</b></summary>
 
-**Date** : `July 06th, 2024`
+**Data** : `6 de julho de 2024`
 
-- Added `qt6ct` and config
-- Added Empty battery module if using a desktop
-- Updated scripts related to screenshots, dynamic colors for selection border
-- Updated tint2 scripts for battery and brightness
-- Updated `polybar` configs, reloads on screen changes
-- Fixed some pipemenus for `openbox`
-- Bug fixes, etc
-
-</details>
-
-<details>
-<summary><b>Changelog (January 2024) : Second Release</b></summary>
-
-**Date** : `January 16th, 2024`
-
-- Added `i3wm` window manager
-- Migrated alacritty config to `toml`
-- Updated scripts related to alacritty
-- Updated `polybar` configs, fixed font issue and added `tray` modules
-- Fixed some pipemenus for `openbox`
-- Added better multi-monitor config in `bspwm`
-- Bug fixes, etc
+- Adicionado `qt6ct` e sua configuração
+- Adicionado o módulo de Bateria vazia se usado no desktop
+- Atualizados os scripts relacionados a screenshots, cores dinãmicas para seleção de borda
+- Atualizados os scripts do tint2 para bateria e brilho
+- Atualizada as configurações da `polybar`, recarregamentos nas mudanças de tela
+- Corrigidos alguns pipemenus para `openbox`
+- Correção de bugs, etc
 
 </details>
 
 <details>
-<summary><b>Changelog (September 2023) : First Release</b></summary>
+<summary><b>Changelog (Janeiro de 2024) : Segundo lançamento</b></summary>
 
-**Date** : `September 15th, 2023`
+**Data** : `16 de janeiro de 2024`
 
-- Released Voidcraft
+- Adicionado o window manager `i3wm`
+- Configuração do alacritty migrada para `toml`
+- Scripts relacionados ao alacritty atualizados
+- Atualizadoa as configurações da `polybar`, problema da fonte e adicionado modulos para `bandeja`
+- Corrigido alguns pipemenus para o `openbox`
+- Adicionado uma configuração melhor para multi-monitor no `bspwm`
+- Correção de bugs, etc
+ 
+</details>
+
+<details>
+<summary><b>Changelog (Setembro de 2023) : Primeiro Lançamento</b></summary>
+
+**Data** : `15 de setembro de 2023`
+
+- Voidcraft Lançado
 
 </details>
 
@@ -121,7 +121,7 @@ An **asciinema** file `voidcraft.cast` is provided as well, you can play that to
 
 ### Desktop
 
-Here's few screenshots of `Openbox`, `Bspwm` and `i3wm` desktops. These'll give you an idea of the experience of these WMs in Voidcraft. 
+Aqui estão alguns screenshots do `Openbox`, `Bspwm` e `i3wm`. Eles te darão uma ideia da experiência desses WMs no Ubuntucraft.
 
 <Tabs>
 
@@ -171,13 +171,13 @@ Here's few screenshots of `Openbox`, `Bspwm` and `i3wm` desktops. These'll give 
 
 </Tabs>
 
-### Themes
+### Temas
 
 <Tabs>
 
 <TabItem value="wm_1" label="Openbox" default>
 
-There are **10 themes** available in openbox.
+Temos **10 temas** disponíveis no openbox.
 
 |Theme 1|Theme 2|Theme 3|Theme 4|Theme 5|
 |---|---|---|---|---|
@@ -191,7 +191,7 @@ There are **10 themes** available in openbox.
 
 <TabItem value="wm_2" label="Bspwm" default>
 
-There are **10 themes** available in bspwm.
+Temos **10 temas** disponíveris no bspwm.
 
 |Theme 1|Theme 2|Theme 3|Theme 4|Theme 5|
 |---|---|---|---|---|
@@ -205,7 +205,7 @@ There are **10 themes** available in bspwm.
 
 <TabItem value="wm_3" label="i3wm" default>
 
-There is only **one theme** available in i3wm.
+Temos apenas **um tema** disponível no i3wm.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/archcraftify/voidcraft/i3wm/desktop/desktop_1.png)
 
@@ -217,40 +217,40 @@ There is only **one theme** available in i3wm.
 ## FAQs
 
 <details>
-<summary><b>How to use Voidcraft?</b></summary>
+<summary><b>Como usar o Voidcraft?</b></summary>
 
-For any help with Configurations and Keybindings, visit the respective window manager's page.
+Para qualquer ajuda com Configurações e Atalhos de Teclado, Visite a págia do window manager respectivo.
 
-**Openbox :** [`Here`](/docs/window-managers/stacking-wm/openbox) <br/>
-**Bspwm :** [`Here`](/docs/window-managers/tiling-wm/bspwm) <br/>
-**i3wm :** [`Here`](/docs/window-managers/tiling-wm/i3wm)
-
-</details>
-
-<details>
-<summary><b>How to get the Updates?</b></summary>
-
-Follow the steps below to get updates (or re-download files):
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Openbox :** [`Aqui`](/docs/window-managers/stacking-wm/openbox) <br/>
+**Bspwm :** [`Aqui`](/docs/window-managers/tiling-wm/bspwm) <br/>
+**i3wm :** [`Aqui`](/docs/window-managers/tiling-wm/i3wm)
 
 </details>
 
 <details>
-<summary><b>I need help with Voidcraft?</b></summary>
+<summary><b>Como atualizar?</b></summary>
 
-The best places to get help quickly are **Archcraft Communities**. So join them and ask for help there. The links are in footer section of this wiki.
-
-If you face any issue with this, Email me at **adi1090x@gmail.com** and feel free to ask for help.
+Siga os passos abaixo para atualizar (ou baixar novamente os arquivos):
+- Faça login na sua conta do Ko-fi
+- Vá até o seu `Histórico de Pagamentos Ko-fi`
+- Selecione as compras que você fez
+- Clique em `Ver Detalhes`
+- Depois clique em `Ver conteúdo` para baixar os arquivos atualizados.
 
 </details>
 
 <details>
-<summary><b>Where do i report issues?</b></summary>
+<summary><b>Eu preciso de ajuda com Voidcraft</b></summary>
 
-Have you found any bug and want to report it, Open an issue on [Github](https://github.com/archcraft-os/voidcraft/issues)
+Os melhores lugares para conseguir ajuda rápida são **Comunidades Archcraft**. Então junte-se à elas e peça por ajuda. Os links estão no rodapé dessa wiki.
+
+Caso você tenha algum problema com isso, mande-me um e-mail **adi1090x@gmail.com** e sinta-se à vontade para pedir ajuda.
+
+</details>
+
+<details>
+<summary><b>Onde eu reporto os problemas?</b></summary>
+
+Caso você encontre algun bug e queira reportá-lo, abra uma issue no [Github](https://github.com/archcraft-os/voidcraft/issues)
 
 </details>
