--- a/i18n/pt/docusaurus-plugin-content-docs/current/other-distro/ubuntucraft.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/other-distro/ubuntucraft.mdx
@@ -23,57 +23,57 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas a partir daqui -------------------- -->
 
-**Ubuntucraft : Experience Archcraft on Ubuntu**
+**Ubuntucraft : Experiência do Archcraft no Ubuntu**
 
 [![video](https://raw.githubusercontent.com/archcraft-os/misc-files/main/archcraftify/ubuntucraft/main.gif)](https://youtu.be/nTnqDM8qNTk)
 
-## Overview
+## Visão geral
 
-- Turns your Ubuntu into **Archcraft**
-- Fully configured `openbox` window manager
-- Fully configured `bspwm` window manager
-- Fully configured `i3wm` window manager **`NEW`**
-- Multiple **themes/styles** for both (openbox and bspwm) WMs
-- Everything else that Archcraft offers
+- Transforme seu Ubuntu no **Archcraft**
+- Window manager `openbox` totalmente configurado
+- Window manager `bspwm` totalmente configurado
+- Window manager `i3wm` totalm4nte configurado **`Novo`**
+- Muitos **temas/estilos** para ambos (openbox e bspwm) WMs
+- Tudo mais que o Archcraft oferece
 
 :::warning
-**Ubuntucraft** is not an ISO or Ubuntu based distribution.
+**Ubuntucraft** não é uma ISO ou uma distribuição baseada no Ubuntu
 :::
 
-**Ubuntucraft** is an installable package that will turn your [Ubuntu](https://ubuntu.com/) installation into Archcraft. Once installed on the top of Ubuntu, It'll offer everything Archcraft offers on your Ubuntu.
+**Ubuntucraft** é um pacote de instalação para transformar seu [Ubuntu](https://ubuntu.com/) no Archcraft. Uma vez instalado em cima do Ubuntu, ele irá ter tudo que o Archcraft oferece no seu Ubuntu.
 
-**Important** : Ubuntucraft is created on the top of `Ubuntu 22.04 LTS Desktop` and It's ***recommended*** that you install this on a fresh installation of Ubuntu 22.04 LTS.
+**Importante** : Ubuntucraft é criado em cima do `Ubuntu 22.04 LTS Desktop` e é ***recomendado*** que seja instalado em uma nova instalação do Ubuntu 22.04 LTS.
 
 :::info
-It may work on older and newer version of Ubuntu as well, It's just not tested on those version.
+Ele pode funcionar em uma versão mais antiga ou mais nova do Ubuntu, só não foi testado em outras versões.
 :::
 
 <!-- Download ------------------------------------- -->
 
 ## Download
 
-You can download the latest package from <Highlight color="#50545b"><a href="https://ko-fi.com/s/1d8e3409a8" target="_blank">ko-fi ☕</a></Highlight>
+Você pode baixar o pacote atualizado em <Highlight color="#50545b"><a href="https://ko-fi.com/s/1d8e3409a8" target="_blank">ko-fi ☕</a></Highlight>
 
-### Installation
+### Installação
 
-Follow the step below to install Ubuntucraft :
+Siga os passos abaixo para instalar o Ubuntucraft:
 
-- First, **Install Ubuntu 22.04 LTS** (`Minimal Installation`)  on your computer
-- Download the `ubuntucraft.tar.gz` file from ko-fi
-- Transfer or save the file on your Ubuntu installation
-- Extract the file : `tar -xzvf ubuntucraft.tar.gz`
-- Change to extracted directory : `cd ubuntucraft`
-- Run install script and let it do it's job : `./install.sh`
-- Once finished, _reboot your computer_ and you'll have **Ubuntucraft installed**.
+- Primeiro, **Instale o Ubuntu 22.04 LTS** (`Instalação Mínima`) no seu computador
+- Baixe o `ubuntucraft.tar.gz` pelo ko-fi
+- Transfira ou salve o arquivo na sua instalação do Ubuntu
+- Extraia o arquivo: `tar -xzvf ubuntucraft.tar.gz`
+- Mude para o diretório extraído: `cd ubuntucraft`
+- Execute o script de instalação e deixe-o fazer o trabalho: `./install.sh`
+- Depois de finalizado _reinicie seu computador_ e você terá o **Ubuntucraft instalado**.
 
 :::info[Video]
-Watch the [complete installation video](https://youtu.be/nTnqDM8qNTk)
+Veja o [vídeo de instalação](https://youtu.be/nTnqDM8qNTk)
 :::
 
 :::tip[Asciinema]
-An **asciinema** file `ubuntucraft.cast` is provided as well, you can play that to see how the script works before using it.
+O arquivo **asciinema** `ubuntucraft.cast` é fornecido, você pode executá-lo para ver como o script trabalha antes de usá-lo.
 :::
 
 <!-- Changelogs ----------------------------------- -->
@@ -81,26 +81,26 @@ An **asciinema** file `ubuntucraft.cast` is provided as well, you can play that 
 ## Changelogs
 
 <details>
-<summary><b>Changelog (January 2024) : Last Update</b></summary>
+<summary><b>Changelog (Janeiro de 2024) : última atualização</b></summary>
 
-**Date** : `January 14th, 2024`
+**Data** : `14 de janeiro de 2024`
 
-- Added `i3wm` window manager
-- Migrated alacritty config to `toml`
-- Updated scripts related to alacritty
-- Fixed some pipemenus for `openbox`
-- Added better multi-monitor config in `bspwm`
-- `python2` is no longer a dependency
-- Bug fixes, etc
+- Adicionado o window manager `i3wm`
+- Configuração do alacritty migrada para `toml`
+- Scripts relacionados ao alacritty atualizados
+- Corrigido alguns pipemenus para o `openbox`
+- Adicionado uma configuração melhor para multi-monitor no `bspwm`
+- `python2` não é mais uma dependência
+- Correção de bugs, etc
 
 </details>
 
 <details>
-<summary><b>Changelog (August 2023) : First Release</b></summary>
+<summary><b>Changelog (Agosto de 2023) : Primeira versão</b></summary>
 
-**Date** : `August 29th, 2023`
+**Data** : `29 de agosto de 2023`
 
-- Released Ubuntucraft
+- Ubuntucraft lançado
 
 </details>
 
@@ -110,7 +110,7 @@ An **asciinema** file `ubuntucraft.cast` is provided as well, you can play that 
 
 ### Desktop
 
-Here's few screenshots of `Openbox`, `Bspwm` and `i3wm` desktops. These'll give you an idea of the experience of these WMs in Ubuntucraft. 
+Aqui estão alguns screenshots do `Openbox`, `Bspwm` e `i3wm`. Eles te darão uma ideia da experiência desses WMs no Ubuntucraft.
 
 <Tabs>
 
@@ -151,13 +151,13 @@ Here's few screenshots of `Openbox`, `Bspwm` and `i3wm` desktops. These'll give 
 
 </Tabs>
 
-### Themes
+### Temas
 
 <Tabs>
 
 <TabItem value="wm_1" label="Openbox" default>
 
-There are **10 themes** available in openbox.
+Temos **10 temas** disponíveis no openbox.
 
 |Theme 1|Theme 2|Theme 3|Theme 4|Theme 5|
 |---|---|---|---|---|
@@ -171,7 +171,7 @@ There are **10 themes** available in openbox.
 
 <TabItem value="wm_2" label="Bspwm" default>
 
-There are **10 themes** available in bspwm.
+Temos **10 temas** disponíveris no bspwm.
 
 |Theme 1|Theme 2|Theme 3|Theme 4|Theme 5|
 |---|---|---|---|---|
@@ -185,7 +185,7 @@ There are **10 themes** available in bspwm.
 
 <TabItem value="wm_3" label="i3wm" default>
 
-There is only **one theme** available in i3wm.
+Temos apenas **um tema** disponível no i3wm.
 
 ![img](https://raw.githubusercontent.com/archcraft-os/misc-files/main/archcraftify/ubuntucraft/i3wm/desktop/desktop_1.png)
 
@@ -197,40 +197,40 @@ There is only **one theme** available in i3wm.
 ## FAQs
 
 <details>
-<summary><b>How to use Ubuntucraft?</b></summary>
+<summary><b>Como usar o Ubuntucraft?</b></summary>
 
-For any help with Configurations and Keybindings, visit the respective window manager's page.
+Para qualquer ajuda com Configurações e Atalhos de Teclado, Visite a págia do window manager respectivo.
 
-**Openbox :** [`Here`](/docs/window-managers/stacking-wm/openbox) <br/>
-**Bspwm :** [`Here`](/docs/window-managers/tiling-wm/bspwm) <br/>
-**i3wm :** [`Here`](/docs/window-managers/tiling-wm/i3wm)
-
-</details>
-
-<details>
-<summary><b>How to get the Updates?</b></summary>
-
-Follow the steps below to get updates (or re-download files):
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Openbox :** [`Aqui`](/docs/window-managers/stacking-wm/openbox) <br/>
+**Bspwm :** [`Aqui`](/docs/window-managers/tiling-wm/bspwm) <br/>
+**i3wm :** [`Aqui`](/docs/window-managers/tiling-wm/i3wm)
 
 </details>
 
 <details>
-<summary><b>I need help with Ubuntucraft?</b></summary>
+<summary><b>Como atualizar?</b></summary>
 
-The best places to get help quickly are **Archcraft Communities**. So join them and ask for help there. The links are in footer section of this wiki.
-
-If you face any issue with this, Email me at **adi1090x@gmail.com** and feel free to ask for help.
+Siga os passos abaixo para atualizar (ou baixar novamente os arquivos):
+- Faça login na sua conta do Ko-fi
+- Vá até o seu `Histórico de Pagamentos Ko-fi`
+- Selecione as compras que você fez
+- Clique em `Ver Detalhes`
+- Depois clique em `Ver conteúdo` para baixar os arquivos atualizados.
 
 </details>
 
 <details>
-<summary><b>Where do i report issues?</b></summary>
+<summary><b>Eu preciso de ajuda com Ubuntucraft</b></summary>
 
-Have you found any bug and want to report it, Open an issue on [Github](https://github.com/archcraft-os/ubuntucraft/issues)
+Os melhores lugares para conseguir ajuda rápida são **Comunidades Archcraft**. Então junte-se à elas e peça por ajuda. Os links estão no rodapé dessa wiki.
+
+Caso você tenha algum problema com isso, mande-me um e-mail **adi1090x@gmail.com** e sinta-se à vontade para pedir ajuda.
+
+</details>
+
+<details>
+<summary><b>Onde eu reporto os problemas?</b></summary>
+
+Caso você encontre algun bug e queira reportá-lo, abra uma issue no [Github](https://github.com/archcraft-os/ubuntucraft/issues)
 
 </details>
