--- a/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
@@ -23,236 +23,236 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-**Archcraft Prime : An Ultimate Exclusive Experience**
+**Archcraft Prime : Uma Experiência Exclusiva Ultimate**
  
 ![gif](https://raw.githubusercontent.com/archcraft-os/misc-files/main/gifs/prime.gif)
 
-## Introduction
+## Introdução
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece todas (`Nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***Uma Única ISO***. Nele temos [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim comotodos os compositores wayland exclusivos([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pre-instalados.
 
-The flavor of Archcraft is a result of many people's requests and polls ([discord](https://discord.com/channels/888837929789710387/890046536778678355/1091409213147844658), [telegram](https://t.me/archcraftos/48993)) I did on communities. Based on the majority of voting in favor of the creation of this flavor, I present you the **`Archcraft Prime`**.
+Esse sabor do Archcraft é um resultado da sugestão de muitas pessoas e enquetes ([discord](https://discord.com/channels/888837929789710387/890046536778678355/1091409213147844658), [telegram](https://t.me/archcraftos/48993)) que eu fiz nas comunidades. Baseado na votação da maioria a favor da criação deste sabor, eu paresento o **`Archcraft Prime`**.
 
-It's basically a **Bundle** that has everything Archcraft has to offer exclusively. The idea behind this is to provide everything for less and If users want everything, they don't need to get them separately, and have to install everything individually, Instead they can get the complete bundle and all they need to do is, Install the ISO (with the choice of their favorite WM or WC)
+Ele é basicamente um **Pacote** com tudo que o Archcraft oferece com exclusividade. A ideia por trás disso vem de tudo por menos e se o usuário quer tudo, ele não precisa ter tudo separadamente, e instalar tudo individualmente, em vez disso, ele pode ter tudo em um pacote completo com tudo o que ele precisa, instale a ISO (e escolha seu WM ou WC favorito)
 
 <!-- Download ------------------------------------- -->
 
 ## Download
 
-You can download the latest ISO from <Highlight color="#50545b"><a href="https://ko-fi.com/s/c925a2a8c1" target="_blank">ko-fi ☕</a></Highlight>
+Você pode baixar a ISO em <Highlight color="#50545b"><a href="https://ko-fi.com/s/c925a2a8c1" target="_blank">ko-fi ☕</a></Highlight>
 
-> Default `username` and `password` is **liveuser**
+> O `nome de usuário` e `senha` padrão são **liveuser**
 
-### Installation
+### Instalação
 
-To Create A Bootable USB, See [Create A Bootable USB](/docs/boot-iso/boot-with-usb) <br/>
-For Graphical Installation Instructions, See [Install Archcraft With Calamares](/docs/install-archcraft/install-with-calamares) <br/>
-For CLI Installation Instructions, See [Install Archcraft With ABIF](/docs/install-archcraft/install-with-abif)
+Para criar um USB bootável, veja [Criar um USB Bootável](/docs/boot-iso/boot-with-usb) <br/>
+Para instruções para instalação gráfica, veja [Instalar o Archcraft com Calamaress](/docs/install-archcraft/install-with-calamares) <br/>
+Para instruções para instalação CLI, veja [Instalar o  Archcraft com ABIF](/docs/install-archcraft/install-with-abif)
 
-### Update
+### Atualizar
 
-If you're an existing Prime user, you don't need to reinstall the ISO to update the system. Follow the steps below to update your Prime :
+sSe você é um usuário Prime, você não precisa reinstalar a ISO para atualizar o sistema. Siga os passos abaixo para atualizar seu Prime:
 
-- On regular basis, Just run the following command to update your system -
+- Na base regular, apenas execute o código a seguir para atualizar seu sistema - 
 ```bash
 $ sudo pacman -Syyu
 ``` 
-- When there's a new ISO for Prime get released, an **Update Package** is also released with ISO for existing Prime users. Use this update package to update Prime specific things.
-  - Download the update package `existing-prime-update-MONTH-YEAR.tar.gz` from ko-fi.
-  - Extract it with : `tar -xzvf existing-prime-update-MONTH-YEAR.tar.gz`
-  - Go to extracted directory : `cd existing-prime-update-MONTH-YEAR`
-  - Open a terminal in same directory and run the update script : `./01_update.sh`
-  - That's it.
+- Quando uma nova ISO do Prime é lançada, uma **Atualização de Pacote** também é lançada com a ISO para os usuários Prime. Use esta atualização de pacotes para atualizar coisas específicas do Prime.
+  - Baixe o pacote de atualização `atualizacao-existente-prime-MES-ANO.tar.gz` pelo ko-fi.
+  - Extraia com: `tar -xzvf atualizacao-existente-prime-MES-ANO.tar.gz
+  - Vá para o diretório extrído: `cd atualizacao-existente-prime-MES-ANO`
+  - Abra o terminal no m,esmo diretporio e execute o script de atualização: `./01_update.sh`
+  - É isso.
 
 <!-- Changelogs ----------------------------------- -->
 
 ## Changelogs
 
 <details>
-<summary><b>Changelog (April 2024) : 6th ISO</b></summary>
+<summary><b>Changelog (Abril de 2024) : 6ª ISO</b></summary>
 
-**Date** : `April 10th, 2024`
+**Data** : `10 de abril de 2024`
 
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Added latest version of `calamares` installer and it's config (_fixed autologin issue_)
-- Added a new `grub` package (_fixed issue with installation on `xfs` filesystem_)
-- Added grub hooks package (_to install grub on every update_)
-- Added `archcraft-arandr` (GUI) package to manage screen layouts (_save and restore them_)
-- Fixed QT theming issue, added configs for QT6
-- Updated all window managers :
-  - Improved experience on Desktop Computers
-  - Openbox: Fixed some pipemenus and updated configs and theme (battery detection, etc)
-  - Bspwm: updated configs and themes (battery detection, etc)
-  - i3wm: updated configs and themes (battery detection, etc)
-- Updated all wayland compositors :
-  - Added `open-as-root` rofi applet in all WCs
-  - Hyprland: added `hyprlock` & `hypridle` and updated configs to v0.38.0
-  - Newm: fixed issue with rofi app-id and session names
-- Improved thunar actions functionalities
-  - open terminal according to session
-  - open as root according to session
-  - permanently sets the wallpaper in supported sessions
-- Small improvements and bugs fixed.
-
-</details>
-
-<details>
-<summary><b>Changelog (January 2024) : 5th ISO</b></summary>
-
-**Date** : `January 9th, 2024`
-
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Updated all window managers
-  - Openbox: Fixed some pipemenus and updated configs and themes
-  - Bspwm: updated configs and themes (tray module for polybar)
-  - i3wm: updated configs and themes (tray module for polybar)
-- Updated all wayland compositors
-  - Sway: fixed bugs and updated configs
-  - Wayfire: migrated to v0.8.0 and updated configs accordingly
-  - River: fixed bugs and updated configs
-  - Hyprland: using my own hyprland build for stability and updated configs to v0.34.0
-  - Newm: fixed issue with waybar gets hidden behind windows and updated configs
-- Migrated `alacritty` to its new config (`yml` to `toml`)
-- Updated **all scripts** related to alacritty
-- Small improvements and bugs fixed.
+- Perfil da ISO atualizado
+- Última base com pacotes novos
+- Todos os pacotes do Archcraft e do AUR atualizados
+- Adicionado a última versão do instalados `calamares` e sua configuração (_corrigido o problema de autologin_)
+- Adicionado o novo pacote do `grub` (_corrigido o problema com a instalação no sistema de arquivos `xfs`_)
+- Adicionados pacotes de hook do grub (_para instalar o grub em todas as atualizações_)
+- Adicionado o pacote `arcgcraft-arandr` (GUI) para gerenciar os layouts de tela (_salvar e restaurar_)
+- Corrigido o problema do tema QT, adicionado configurações para QT6
+- Atualizados todos os window managers:
+  - Experiência em Desktop melhorada
+  - Openbox: Corrigido alguns pipemenus e configurações e temas atualizados (detecção de bateria, etc)
+  - Bspwm: Configurações e temas atualizados (detecção de bateria, etc)
+  - i3wm: Configurações e temas atualizados (detecção de bateria, etc)
+- Atualizados todo os compositores wayland:
+  - Adicionado o applet do rofi `abrir-como-root` em todos os WCs
+  - Hyprland: Adicionado o `hyprlock` & `hyptidle` e atualizadas as configurações para v0.38.0
+  - Newm: Corrigido o erro com rofi app-id e nomes de sessão
+- Ações e funcionalidades do Thunar melhorados
+  - Abrir o terminal de acordo com a sessão
+  - Abrir como root de acordo com a sessão
+  - Troca o papel de parede permanentemente em sessões suportadas
+- Pequenas melhorias e correções de bugs.
 
 </details>
 
 <details>
-<summary><b>Changelog (October 2023) : 4th ISO</b></summary>
+<summary><b>Changelog (Janeiro de 2024) : 5ª ISO</b></summary>
 
-**Date** : `October 14th, 2023`
+**Data** : `9 de janeiro de 2024`
 
-- Updated ISO profile
-- Latest base with new packages
-- Added `archcraft-randr` app to manager display and monitors (Only X11)
-- Updated all window managers
-  - Clean PKGBUILDs (`with only needed deps`) and updated code
-  - Directory **openbox-themes** now merged into **openbox**, new config structure for openbox
-  - Added **example layouts** for multi-monitors in `bspwmrc` (single, two-monitors, three-monitors layouts)
-  - Added multi-monitor support in all available WMs (use `archcraft-randr`)
-- Updated all wayland compositors
-  - Added better example for multi-monitor support in...
+- Perfil da ISO atualizado
+- Última base com pacotes novos
+- Todos os pacotes do Archcraft e AUR atualizados
+- Todos os window managers atualizados
+  - Openbox: Corrigidos alguns pipemenus e configurações e temas atualizados
+  - Bspwm: Atualizados as configurações e temas (módulo de bandeja para polybar)
+  - i3wm: Atualizados as configurações e temas (módulo de bandeja para polybar)
+- Todos os compositores wayland atualizados
+  - Sway: Bugs corrigidos e configurações atualizadas
+  - Wayfire: Migrado para v0.8.0 e configurações atualizadas de acordo
+  - River: Bugs corrigidos e configurações atualizadas
+  - Hyprland: Usando minha própria construção do Hyprland para estabilidade e configuração atualizada para v0.34.0
+  - Newm: Corrigido o problema com a waybar se escondendo atrás das janelas e configurações atualizadas
+- Migação do `alacritty` para sua nova configuração (`yml` para toml`)
+- **Todos os scripts** relacionados ao alacritty atualizados
+- Pequenas melhorias e correção de bugs.
+
+</details>
+
+<details>
+<summary><b>Changelog (Outubro de 2023) : 4ª ISO</b></summary>
+
+**Data** : `14 de outubro de 2023`
+
+- Perfil da ISO atualizado
+- Última base com pacotes novos
+- Adicionado o app `archcraft-randr` para gerenciar a tela e monitor (Somente X11)
+- Todos os window managers atualizados
+  - PKGBUILDs limpos (`com somente as dependências necessárias`) e código atualizado
+  - Diretório **openbox-themes** agora está mesclado em **openbox**, nova estrutura de configuração para openbox
+  - Adicionado **exemplos de layouts** para muilti-monitor em `bspwmrc` (layouts para um, dois, ou três monitores)
+  - Adicionado suporte para multi-monitor em todos os WMs disponíveis (use `archcraft-randr`)
+- Todos os compositores wayland atualizados
+  - Adicionado um exemplo melhor para o suporte multi-monitor em...
     - Sway: `~/.config/sway/sway-output`
     - Wayfire: `~/.config/wayfire.ini`
     - River: `~/.config/river/init`
     - Hyprland: `~/.config/hypr/hyprland.conf`
     - Newm: `~/.config/newm/config.py`
-- Added `wipe` ability in ABIF
-- Fixed issue with `help and tips` app
-- Removed `python2` as it's not needed anymore
-- Small improvements and bugs fixed.
+- Adicionado a abilidade de `wipe` no ABIF
+- Corrigido o problema com o app `ajuda e dicas`
+- Removido `python2`, não é necessário mais
+- Pequenas melhorias e correção de bugs.
 
 </details>
 
 <details>
-<summary><b>Changelog (July 2023) : 3rd ISO</b></summary>
+<summary><b>Changelog (Julho de 2023) : 3ª ISO</b></summary>
 
-**Date** : `July 10th, 2023`
+**Data** : `10 de julho de 2023`
 
-- Updated ISO profile with latest archiso
-- Latest base with new packages
-- Fixed `xfce-power-manager` issue (not locking the screen on lid close)
-- Fixed sddm not saving the last used session issue
-- Added a calculator app
-- Added Welcome and Help-and-Tips App
-- Fixed Scaling issue in QT apps in wayland
+- Perfil da ISO atualizado com o archiso mais recente
+- Última base com pacotes novos
+- Corrigido o problema com `xfce-power-manager` (não bloqueia a tela quando é fechado)
+- Corrigido o problema do sddm não salvando a última sessão usada
+- Adicionado o app de calculadora
+- Adicionado o app de Boas-Vindas e Ajuda-e-Dicas
+- Corrigido o problema de escala nos apps QT no wayland
 - **`Openbox WM`**
-  - Added `tint2` as alternate panel (in all themes)
-  - Ability to switch between panels
-  - Added `bluetooth` module on both panels
-  - Added a rofi `bluetooth` applet
-  - Fixed window resizing issue via each side of window
+  - Adicionado o `tint2` como painel alternativo (em todos os temas)
+  - Abilidade de trocar entre os painéis
+  - Adicionado o módulo de `bluetooth` em ambos os painéis
+  - Adicionado o applet de `bluetooth` no rofi
+  - Corrigido o problema de redimensionamento de janela em cada lado da janela
   - etc
 - **`BSPWM`**
-  - Added `bluetooth` module on polybar (in all themes)
-  - Added a rofi `bluetooth` applet
+  - Adicionado o módulo de `bluetooth` na polybar (em todos os temas)
+  - Adicionado o applet de `bluetooth` no rofi
   - etc
 - **`I3wm`**
-  - Added `bluetooth` module on polybar (in all themes)
-  - Added a rofi `bluetooth` applet
+  - Adicionado o módulo de `bluetooth` na polybar (em todos os temas)
+  - Adicionado o applet de `bluetooth` no rofi
   - etc
 - **`Sway, Wayfire, River, Hyprland`**
-  - Added `bluetooth` module on Waybar
-  - Added a rofi `bluetooth` applet
-  - Added `alacritty` terminal
-  - Added `pywal` support
-  - Improved a lot of scripts
+  - Adicionado o módulo de `bluetooth` na polybar (em todos os temas)
+  - Adicionado o applet de `bluetooth` no rofi
+  - Adicionado o terminal `alacritty`
+  - Adicionado o suporte `pywal`
+  - Melhoria de um monte de scripts
   - etc
-- Many small bugs fixed.
+- Alguns pequenos bugs corrigidos.
 
 </details>
 
 <details>
-<summary><b>Changelog (May 2023) : 2nd ISO</b></summary>
+<summary><b>Changelog (Maio de 2023) : 2ª ISO</b></summary>
 
-**Date** : `May 6th, 2023`
+**Data** : `6 de maio de 2023`
 
-- Nothing Much, Just Updated The ISO with Fixed NEWM
+- Nada demais, apenas atualização da ISO e correção do NEWM
 
 </details>
 
 <details>
-<summary><b>Changelog (April 2023) : 1st ISO</b></summary>
+<summary><b>Changelog (Abril de 2023) : 1ª ISO</b></summary>
 
-**Date** : `April 28th, 2023`
+**Data** : `28 de abril de 2023`
 
-- Created the ISO base from scratch
-- Grub2 bootloader with themes
-- Customized Plymouth & SDDM
-- Basic Applications Only, No Bloatware
-- Calamares Installer (Graphical) with ability to choose WMs/WCs
-- ABIF (CLI) Installer as secondary installer
-- Full Network Manager Support, Various VPN plugins
-- Built-in Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Built-in Printer Support
-- Almost All Audio, Video and Image Codecs
-- Full File manager functionality (Mounting, Networking, Archiving, etc)
-- Built-in AUR support
-- Minimal User Interface
-- All Premium Window Managers (Openbox, Bspwm and i3wm)
-- All Exclusive Wayland Compositors (Sway, Wayfire, River, Hyprland, Newm)
-- Archcraft Icons, Themes, Wallpapers, Fonts
+- Base da ISO criada do zero
+- Inicializador Grub2 com temas
+- Plymouth & SDDM customizados
+- Apenas aplicações básicas, nada desnecessário
+- Instalador Calamares (Gráfico) com abilidade de escolher WMs/WCs
+- Instalador ABIF (CLI) como instalador secundário
+- Suporte completo para gerenciamento de Network, vários plugins de VPN
+- Suporte para Bluetooth integrado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora integrado
+- Quase todos codecs de áudio, vídeo e imagem
+- Funcionadlidade completa para o gerenciador de arquivos (montagem, conexão, arquivamento, etc)
+- Suporte ao AUR integrado
+- Interface de usuário mínima
+- Todos os Window Managers Premium (Openbox, Bspwm, i3wm)
+- Todos os compositores wayland exclusivos (Sway, Wayfire, River, Hyprland, Newm)
+- Ícones, temas, papéis de parede e fontes do Archcraft
 - Etc
 
 </details>
 
-<!-- Compatibility -------------------------------- -->
+<!-- Compatibilidade -------------------------------- -->
 
-## Compatibility
+## Compatibilidade
 
-### Virtual Machines
+### Máquinas Virtuais
 
-This ISO works with VMs (Virtualbox, VMware, Qemu, etc). But **only the Window Managers** (X11) will work on it. All **the Wayland Compositors will not work**. If worked, They will be very laggy due to poor 3D support.
+Essa ISO funciona em VMs (Virtualbox, VMware, Qemu, etc). Mas **somente os Window Managers** (X11) vão funcionar. Todos os **compositores wayland não funcionam**. Se funcionar, serão muito lentos devido ao suporte 3D precário.
 
 ### Nvidia
 
-There is no official support for Nvidia. Unfortunately, their drivers are so messy, and their products so random, that it’s impossible to help if `the wayland compositors on this ISO` don’t work on your machine. Every card seems to be random, and might work perfectly, or not work at all. However...<br/>
-The `ISO` have everything configured **out-of-the-box**, Needed to run a _wayland compositor_ on **Nvidia**. It has all the needed modules enabled into `mkinitcpio.conf` and **initrd**, `Kernel parameters` are added, and the needed proprietary graphics drivers installed.<br/>
-***Now, It's your choise to give it a try.***
+Não existe suporte oficial para Nvidia. Infelizmente, seus drivers são muito confusos, e seu produtos aleatórios, é impossível ajudar se os `copositores wayland nessa ISO` não funcionar na sua máquina. todo caso pode ser aleatório, e funcionar perfeitamente, ou não funcionar de jeito nenhum. Então...<br\>
+A `ISO` tem tudo configurado **fora-da-caixa**, para rodar um _compositor wayland_ usando **Nvidia**. É preciso de todos os módulos habilitados no `mkinitcpio.conf` e no **initrd**, `parâmetros do Kernel` adicionados, e é necessário os drivers de vídeo proprietários instalados.<br\>
+***Agora, é sua escolha tentar isso.***
 
-**Update :** As Reported, Users are able to boot and Install the ISO on their Nvidia Machines.
+**Atualização:** Como reportado, usuários são capazes de inicializar e instalar a ISO nas suas máquinas Nvidia.
 
-**More info :** [Sway Installation](https://wiki.archlinux.org/title/Sway#Installation), [Hyprland Nvidia](https://wiki.hyprland.org/Nvidia/), [wayland Requirements](https://wiki.archlinux.org/title/wayland#Requirements), [DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting), [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation)
+**Mais Informações: ** [Instalação do Sway](https://wiki.archlinux.org/title/Sway#Installation), [Hyprland Nvidia](https://wiki.hyprland.org/Nvidia/), [requerimentos do wayland](https://wiki.archlinux.org/title/wayland#Requirements), [DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting), [Instalação#NVIDIA](https://wiki.archlinux.org/title/NVIDIA#Installation)
 
 ### Intel Iris XE
 
-Some users reported that, The Wayland Compositors on this ISO does not work on systems with `Intel Iris XE` GPUs.
+Alguns usuários reportaram que os Compositores Wayland dessa ISO não funcionam em sistemas com GPUs `Intel Iris XE`.
 
-**Update :** I've personally tested the ISO with an `Nvidia + Intel iris XE` system (***Dell Inspiron 5520***) and the ISO is working just fine.
+**Atualização: ** Eu pessoalmente testei a ISO com um sistema com `Nvidia + Intel iris XE` system (***Dell Inspiron 5520***) e a ISO funcionou bem.
 
 <!-- Screenshots ---------------------------------- -->
 
 ## Screenshots
 
-Click on image to view all the screenshots.
+Clique na imagem para ver todas as screenshots.
 
 <Tabs>
 
@@ -282,9 +282,9 @@ Click on image to view all the screenshots.
 </TabItem>
 </Tabs>
 
-<!-- Videos --------------------------------------- -->
+<!-- Vídeos --------------------------------------- -->
 
-## Videos
+## Vídeos
 
 <Tabs>
 <TabItem value="wm_1" label="Openbox" default>
@@ -318,47 +318,48 @@ Click on image to view all the screenshots.
 ## FAQs
 
 <details>
-<summary><b>How to use Archcraft Prime?</b></summary>
+<summary><b>Como usar o Archcraft Prime?</b></summary>
 
-For any help with Configurations and Keybindings, visit the respective window manager's and wayland compositor's page.
-
-</details>
-
-<details>
-<summary><b>How to get the Updated ISO/Update package?</b></summary>
-
-Follow the steps below to get updates (or re-download files):
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+Para qualquer ajuda com as Configurações e Atalhos de Teclado, visite a página do window manager e compositos wayland respectivo.
 
 </details>
 
 <details>
-<summary><b>Will i get refund if the ISO doesn't work for me?</b></summary>
+<summary><b>Como atualizar a ISO/Pacote de atualização?</b></summary>
 
-First of all, It's a **donation model** of Archcraft, Where you `donate to support` your favorite open-source project.
-
-Archcraft doesn't accept donations. These exclusive stuff helps Archcraft to fullfill its financial needs. the Idea behind this is, **You support Archcraft and in return you'll get a gift. A win-win for both!**
-
-All the scenarios are clearly mentioned on this page ([see compatibility](/docs/premium/wse#compatibility)), about the working of this ISO. If you ***still choose to go with it*** (knowing all the details about it) and the ISO did not work for you. **`Please don't ask for refunds or exchange`**. I'll definitely help you with your issues and try to solve them as soon as possible.
-
-</details>
-
-<details>
-<summary><b>I need help with this ISO?</b></summary>
-
-The best places to get help quickly are **Archcraft Communities**. So join them and ask for help there. The links are in footer section of this wiki.
-
-If you face any issue with this, Email me at **adi1090x@gmail.com** and feel free to ask for help.
+Siga os passos abaixo para atualizar (ou baixar os arquivos novamente):
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver Detalhes`
+- depois, clique em `Ver Conteúdo` para baixar os arquivos atualizados.
 
 </details>
 
 <details>
-<summary><b>Where do i report issues?</b></summary>
+<summary><b>Posso ter o reembolso se a ISO não funcionar para mim?</b></summary>
 
-Have you found any bug in the ISO and want to report it, Open an issue on [Github](https://github.com/archcraft-os/archcraft-prime/issues)
+Primeiro de tudo, este é o **modelo de doação** do Archcraft, onde você `doa para o suporte` do seu projeto open-source favorito.
+
+O Archcraft não aceita doações. Essas coisas exclusivas ajudam o Archcraft em todas as suas necessidades financeiras. A ideia por trás disso, **Você ajuda o Archcraft e em troca você ganha um presente. Ganhar-ganhar para ambos!**
+
+Todos os cenários são claramente mencionados nesta página([veja a compatibilidade](/docs/premium/wse#compatibility)), sobre o funcionamento desta ISO. Se você ***ainda escolher continuar com isso*** (sabendo todos os detalhes sobre isso) e a ISO não funcionar para você. **`Por favor, nao pergunte sobre reembolso ou trocas`**. Eu vpu, definitivamente, te ajudar com seu problemas e tentar resolvê-los o mais rápido possível.
+
+</details>
+
+<details>
+<summary><b>Eu preciso de ajuda com a ISO</b></summary>
+
+Os melhores lugares para se encontrar ajuda rápida são nas **Comunidades Archcraft**. Então junte-se à elas e procure por ajuda lá. Nos links no rodapé da página
+
+Se você tiver problemas com isso, mande-me um e-mail para **adi1090x@gmail.com** e sinta-se à vontade para pedir ajuda.
+
+
+</details>
+
+<details>
+<summary><b>Onde eu reporto os problemas?</b></summary>
+
+Se você um erro na ISO e quiser reportá-lo, abra uma issue no [Github](https://github.com/archcraft-os/archcraft-prime/issues)
 
 </details>
