--- a/i18n/pt/docusaurus-plugin-content-docs/current/premium/wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/premium/wse.mdx
@@ -67,6 +67,44 @@ $ sudo pacman -Syyu
 ## Changelogs
 
 <details>
+<summary><b>Changelog (October 2024) : 10th ISO</b></summary>
+
+**Date** : `October 22nd, 2024`
+
+- Updated ISO profile
+- Latest base with new packages
+- Update all Archcraft and AUR packages
+- Added **new cursor, icon, and GTK themes** (along with updates to existing ones)
+- Added **new icon and nerd fonts** (existing ones updated as well)
+- Theme updates across all WCs (Waybar, Rofi, Wofi etc.)
+- Added `kitty` terminal support in all WCs
+- Updated `alacritty` configurations in all WCs
+- Updated `foot` config in all WCs
+- Added new `neofetch` configuration
+- Updated `zsh` theme
+- **wayfire** : Updated to `0.9.0`, updated configs, added new plugins
+- **river** : Updated configs, Fixed issue with floating WMs
+- **hyprland** : Updated to `0.44.1`, updated configs, updated hyprlock, etc
+- Various bug fixes, and more!
+
+</details>
+
+<details>
+<summary><b>Changelog (July 2024) : 9th ISO</b></summary>
+
+**Date** : `July 4th, 2024`
+
+- Updated ISO profile
+- Latest base with new packages
+- Update all Archcraft and AUR packages
+- Update Openbox Configs
+- Added Firewall (`ufw`) with GUI (`gufw`)
+- Added `apparmor` for MAC (_mandatory access control_)
+- Small improvements and bugs fixed.
+
+</details>
+
+<details>
 <summary><b>Changelog (April 2024) : 8th ISO</b></summary>
 
 **Date** : `April 10th, 2024`
