tranlated prime.mdx

--- a/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
@@ -71,44 +71,45 @@ $ sudo pacman -Syyu
 ## Changelogs
 
 <details>
-<summary><b>Changelog (October 2024) : 8th ISO</b></summary>
+<summary><b>Changelog (Outubro de 2024) : 8ª ISO</b></summary>
 
-**Date** : `October 22nd, 2024`
+**Data** : `22 de outubro de 2024`
 
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Added **new cursor, icon, and GTK themes** (along with updates to existing ones)
-- Added **new openbox wm themes** (existing ones updated as well)
-- Added **new icon and nerd fonts** (existing ones updated as well)
-- Theme updates across all WMs and WCs (Polybar, Waybar, Rofi, Wofi etc.)
-- Added **5 new styles/themes** for openbox wm
-- Added **4 new icon sets** for the openbox menu
-- Added `kitty` terminal support in all WMs and WCs
-- Updated `alacritty` configurations in all WMs and WCs
-- Updated `foot` config in all WCs
-- Added new `neofetch` configuration
-- Updated `zsh` theme
-- Added new `picom` configuration
-- **wayfire** : Updated to `0.9.0`, updated configs, added new plugins
-- **river** : Updated configs, Fixed issue with floating WMs
-- **hyprland** : Updated to `0.44.1`, updated configs, updated hyprlock, etc
+- Prefil da ISO atualizada
+- Última base com novos pacotes
+- Todos os pacotes Archcraft e AUR atualizados
+- Adicionado **novo Cursor, ícones e temas GTK** (com atualizações dos existentes)
+- Adicionado **novos temas do openbox wm** (atualizados os existentes)
+- Adicionado **novos icones e fontes nerd** (atualizados os existentes)
+- Temas atualizados entre todos os WMs e WCs (Polybar, Waybar, Rofi, Wofi, etc.)
+- Adicionados **5 novos temas/estilos** para openbox wm
+- Adicionados **4 novos sets de ícones** para o menu do openbox
+- Aciocionado suporte para o terminal `kitty` em todos os WMs e WCs
+- Atualizada a configuração do `alacritty` em todos os WMs e WCs
+- Atualizada a configuração do `foot` em todos os WCs
+- Adicionada nova configuração para `neofetch`
+- Tema do `zsh` atualizado
+- Adicionada nova configuração para o `picon`
+- **wayfire** : Atualizado para `0.9.0`, configurações atualizadas, novos plugins adicionados
+- **river** : Configurações atualizadas, erro com WMs flutuantes corrigido
+- **Hyprland** : Atualizado para `0.44.1`, configurações atualizadas, hyprlock atualizado, etc
+- Vários erros corrigidos, e mais!
 - Various bug fixes, and more!
 
 </details>
 
 <details>
-<summary><b>Changelog (July 2024) : 7th ISO</b></summary>
+<summary><b>Changelog (Julho de 2024) : 7ª ISO</b></summary>
 
-**Date** : `July 4th, 2024`
+**Data** : `4 de julho de 2024`
 
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Update Openbox Configs
-- Added Firewall (`ufw`) with GUI (`gufw`)
-- Added `apparmor` for MAC (_mandatory access control_)
-- Small improvements and bugs fixed.
+- Perfil da ISO atualizado
+- Base atualizada com novos pacotes
+- Todos os pacotes Archcrafty e AUR atualizados
+- Configurações do Openbox atualizada
+- Adicionado Firewall (`ufw`) com GUI (`gufw`)
+- Adicionado `apparmor` para MAC (_controle de acosse mandatório_)
+- Pequenas melhorias e correçoes de bugs.
 
 </details>
 
